criação do carrinho de compras usando javascript

--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=Loja_brinquedos
+
+spring.data.mongodb.uri=mongodb://localhost:27017/loja_brinquedos
+spring.data.mongodb.database=loja_brinquedos
